[tool.poetry]
name = "rock-paper-sample"
version = "0.1.0"
description = "Rock-Paper-Scissors-Spock-Lizard microservice Sample"
authors = ["Roman A. Taycher <rtaycher1987@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
flask = "^1.1"
sqlalchemy = "^1.3"
flask_sqlalchemy = "^2.4"

[tool.poetry.dev-dependencies]
ipython = "^7.8"
ipdb = "^0.12.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
